--- a/css/css.css
+++ b/css/css.css
@@ -27,7 +27,7 @@ html,body{
 }
 header{
     width: 100%;
-    height: 200px;
+    height: 300px;
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
@@ -236,21 +236,23 @@ header{
 }
 #subMenu2{
     width: 100%;
-    height: 150px;
+    height: 200px;
     position: absolute;
     top: 100px;
     z-index: 100;
     display: none;
+    background-color: white;
 }
 #subMenu2 ul{
     width: 100%;
     height: 100%;
-    float: left;
+    /*float: left;*/
+    border-top: 1px solid lightgrey;
     /*display: flex;*/
     /*justify-content: center;*/
 }
 #subMenu2 ul li{
-    float: left;
+    /*float: left;*/
     position: relative;
     list-style:none;
 }
