--- a/css/css.css
+++ b/css/css.css
@@ -27,7 +27,7 @@ html,body{
 }
 header{
     width: 100%;
-    height: 300px;
+    height: 200px;
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
@@ -236,23 +236,21 @@ header{
 }
 #subMenu2{
     width: 100%;
-    height: 200px;
+    height: 150px;
     position: absolute;
     top: 100px;
     z-index: 100;
     display: none;
-    background-color: white;
 }
 #subMenu2 ul{
     width: 100%;
     height: 100%;
-    /*float: left;*/
-    border-top: 1px solid lightgrey;
+    float: left;
     /*display: flex;*/
     /*justify-content: center;*/
 }
 #subMenu2 ul li{
-    /*float: left;*/
+    float: left;
     position: relative;
     list-style:none;
 }
@@ -261,7 +259,6 @@ header{
     width: 100%;
     height: 100%;
     display: none;
-    z-index: 999;
 }
 .mobileMenu{
     list-style: none;
