--- a/css/css2.css
+++ b/css/css2.css
@@ -32,7 +32,7 @@ header {
     overflow: hidden;
     display: flex;
     position: relative;
-    /*  border: 1px solid red;*/
+  /*  border: 1px solid red;*/
 }
 #subMenu2 {
     display: none;
@@ -179,16 +179,13 @@ header {
     justify-content: center;
     background-color: white;
     font-size: 0.9em;
-    border-top: 1px solid lightgrey;
+    border: 1px solid red;
     box-sizing: border-box;
-}
-#subMenu2 #subMenu2_lastTxt{
-    margin-left: 10px;
 }
 #subMenu2 div{
     width: 220px;
-    /*border: 1px solid blue;*/
-    /*border-top: 1px solid lightgrey;*/
+    border: 1px solid blue;
+    border-top: 1px solid lightgrey;
 }
 #subMenu2 div ul{
     width: 100%;
@@ -196,20 +193,22 @@ header {
 }
 #subMenu2 #subMenu2_firstBox{
     width: 200px;
+    display: flex;
+    /*flex-direction: column;*/
 }
 #subMenu2 #subMenu2_firstBox #subMenu2_textBox{
     width: 100%;
     height: 40px;
     position: relative;
 }
-#subMenu2  div p{
+#subMenu2 #subMenu2_firstBox div p{
     font-size: 1.2em;
     font-weight: bolder;
-    margin: 10px 0 10px 0;
+    margin: 15px 0 15px 0;
 }
 #subMenu2 #subMenu2_firstBox .subMenu2_menu{
     width: 50%;
-    height: 100%;
+    /*height: 140px;*/
     float: left;
 }
 #subMenu2 ul li{
@@ -239,6 +238,7 @@ header {
     width: 100%;
     height: 100%;
     background-color: white;
+    border-top: 1px solid lightgrey;
     margin-left: 30px;
 }
 .mobileGnb #mobileTop{
