--- a/css/css3.css
+++ b/css/css3.css
@@ -19,6 +19,8 @@
 html, body {
     width: 100%;
     height: 100%;
+    font-family: 'Noto Sans KR', sans-serif;
+    letter-spacing:-1.5px;
     /*background-color: #5B6168;*/
 }
 #wrapper {
@@ -358,10 +360,84 @@ header {
     position: relative;
     margin-top: 30px;
     font-size: 1.5em;
+    letter-spacing:0;
 }
 #section1 #allContentBox .contentBox .inside_ContentBox p{
     margin-top: 10px;
     color: #5B6168;
+}
+/**********************section2**********************/
+#section2{
+    width: 100%;
+    height: 630px;
+    border: 1px solid red;
+}
+#section2 #section2_txtBox{
+    width: 100%;
+    height: 100px;
+    /*border: 1px solid blue;*/
+    text-align: center;
+    margin-top: 80px;
+}
+#section2 #section2_txtBox h1{
+    font-size: 2.2em;
+}
+#section2 #section2_txtBox p{
+    margin-top: 15px;
+    color: #5B6168;
+    font-size: 0.9em;
+}
+#section2 #section2_blueCircleBox{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+    width: 600px;
+    height: 150px;
+    z-index: 1;
+    /*border: 1px solid black;*/
+}
+#section2 #section2_blueCircleBox .section2_blueCircle{
+    width: 120px;
+    height: 120px;
+    background-color: #53618C;
+    border-radius: 50%;
+    text-align: center;
+    opacity: 0.9;
+    margin: 30px;
+}
+#section2 #section2_blueCircleBox .section2_blueCircle p{
+    margin-top: 20px;
+    color: white;
+}
+#section2 #section2_purpleCircleBox{
+    position: absolute;
+    display: flex;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    border: 1px solid black;
+    margin-top: -100px;
+    text-align: center;
+}
+#section2 #section2_purpleCircleBox .section2_allPurpleCircle{
+ border: 1px solid yellow;
+}
+#section2 #section2_purpleCircleBox .section2_allPurpleCircle li{
+    list-style: none;
+    font-size: 0.8em;
+}
+#section2 #section2_purpleCircleBox .section2_allPurpleCircle .section2_purpleCircle{
+    width: 120px;
+    height: 120px;
+    background-color: #70388B;
+    border-radius: 50%;
+    text-align: center;
+    opacity: 0.9;
+    margin: 30px;
+    border: 1px solid greenyellow;
+}
+#section2 #section2_purpleCircleBox .section2_allPurpleCircle .section2_purpleCircle p{
+    position: relative;
 }
 /***************************************************************************/
 /*********************************미디어 쿼리*********************************/
