--- a/css/css3.css
+++ b/css/css3.css
@@ -369,8 +369,10 @@ header {
 /**********************section2**********************/
 #section2{
     width: 100%;
-    height: 630px;
-    border: 1px solid red;
+    height: 730px;
+    /*border: 1px solid red;*/
+/*    display: flex;
+    justify-content: center;*/
 }
 #section2 #section2_txtBox{
     width: 100%;
@@ -387,6 +389,7 @@ header {
     color: #5B6168;
     font-size: 0.9em;
 }
+/**blueCircle**/
 #section2 #section2_blueCircleBox{
     position: relative;
     display: flex;
@@ -404,40 +407,77 @@ header {
     border-radius: 50%;
     text-align: center;
     opacity: 0.9;
-    margin: 30px;
+    margin: 28px;
 }
 #section2 #section2_blueCircleBox .section2_blueCircle p{
     margin-top: 20px;
     color: white;
 }
+/**purpleCircle**/
 #section2 #section2_purpleCircleBox{
-    position: absolute;
+    /*position: absolute;*/
+    width: 100%;
     display: flex;
-    /*justify-content: center;*/
-    /*align-items: center;*/
-    border: 1px solid black;
-    margin-top: -100px;
-    text-align: center;
+    justify-content: center;
+    /*border: 1px solid black;*/
+    margin: -100px auto;
+    /*text-align: center;*/
 }
 #section2 #section2_purpleCircleBox .section2_allPurpleCircle{
- border: 1px solid yellow;
+    /*border: 1px solid yellow;*/
+    width: 170px;
+    margin: 3px;
 }
-#section2 #section2_purpleCircleBox .section2_allPurpleCircle li{
+#section2 #section2_purpleCircleBox .section2_allPurpleCircle ul{
+    padding: 0 20px 0 40px;
+    letter-spacing:-1px;
+    text-align: center;
+}
+#section2 #section2_purpleCircleBox .section2_allPurpleCircle ul li{
     list-style: none;
-    font-size: 0.8em;
+    font-size: 13px;
+    position: relative;
+    text-align: left;
+    margin-top: 5px;
+    /*left: 0;*/
+    /*margin: 3px 30px;*/
 }
 #section2 #section2_purpleCircleBox .section2_allPurpleCircle .section2_purpleCircle{
     width: 120px;
     height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #70388B;
     border-radius: 50%;
     text-align: center;
-    opacity: 0.9;
-    margin: 30px;
-    border: 1px solid greenyellow;
+    /*opacity: 0.9;*/
+    margin: 30px auto;
+    /*border: 1px solid greenyellow;*/
 }
 #section2 #section2_purpleCircleBox .section2_allPurpleCircle .section2_purpleCircle p{
     position: relative;
+    font-weight: bolder;
+    color: white;
+}
+/**********************footer**********************/
+#footer{
+    width: 100%;
+    height: 200px;
+    background-color: #1A191B;
+    color: #999999;
+}
+#footer #footerBox{
+    text-align: center;
+}
+#footer #footerBox div img{
+    margin-top: 50px;
+}
+#footer #footerBox p{
+    font-size: 14px;
+}
+#footer #footerBox p:nth-of-type(1){
+    margin-top: 25px;
 }
 /***************************************************************************/
 /*********************************미디어 쿼리*********************************/
@@ -446,7 +486,6 @@ header {
 @media screen and (min-width: 1200px){
     #menu,
     .close,
-    #section1_mobile,
     #hamburger{
         display: none;
     }
@@ -468,5 +507,24 @@ header {
     }
     #topGnb img{
         margin-left: 30px;
+        width: 120px;
+        height: 20px;
+    }
+}
+/**************모바일 사이즈***************/
+@media screen and (max-width: 840px){
+    #topGnb ul li,
+    #language{
+        display: none;
+    }
+    #hamburger{
+        display: block;
+        margin-right: 30px;
+        scale: 1.3;
+    }
+    #topGnb img{
+        margin-left: 30px;
+        width: 120px;
+        height: 20px;
     }
 }
