--- a/css/company.css
+++ b/css/company.css
@@ -4,12 +4,14 @@
     box-sizing: border-box;
 }
 .material-symbols-outlined .arrow2 {
+    /*color: white;*/
+    font-variation-settings: 'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
+.material-symbols-outlined .arrow2 {
     color: white;
-    font-variation-settings:
-            'FILL' 0,
-            'wght' 400,
-            'GRAD' 0,
-            'opsz' 24
 }
 .hidden {
     overflow: hidden;
@@ -31,13 +33,9 @@ header {
     display: flex;
     position: relative;
     margin: 0 auto;
-    /*  border: 1px solid red;*/
 }
 #subMenu2 {
     display: none;
-}
-.po{
-    cursor: pointer;
 }
 /**********************상단 네비**********************/
 #topGnb {
@@ -76,7 +74,6 @@ header {
     line-height: 100px;
     position: relative;
     left: -40px;
-    /*margin-right: -30px;*/
 }
 #topGnb ul li a::after {
     content: "";
@@ -86,7 +83,7 @@ header {
     right: 0;
     bottom: 0;
     height: 3px;
-    transition: width 0.3s;
+    transition: width 0.5s;
     margin: 0 auto;
 }
 #topGnb ul li:hover a::after {
@@ -114,17 +111,6 @@ header {
     margin-top: 40px;
     cursor: pointer;
 }
-.gnbActive{
-    content: "";
-    width: 50%;
-    background-color: purple;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 3px;
-    margin: 0 auto;
-}
 /**********************상단 네비 서브메뉴**********************/
 #subMenu {
     width: 100%;
@@ -133,8 +119,6 @@ header {
     margin-top: 100px;
     z-index: 99999 !important;
     background-color: white;
-    border-top: 1px solid lightgrey;
-    border-bottom: 1px solid lightgrey;
     box-sizing: border-box;
     transition: background-color 0.5s;
     display: none;
@@ -147,6 +131,7 @@ header {
     transition: background-color 0.5s;
     justify-content: center;
     align-items: center;
+    border-top: 1px solid lightgrey;
     position: relative;
     z-index: 9;
     box-sizing: border-box;
@@ -175,9 +160,6 @@ header {
     color: #60227E;
     transition: color 0.5s;
 }
-/*#subMenu li a{
-     position: absolute;
-}*/
 #subMenu li:hover,
 #subMenu2 ul li a:hover{
     color: #60227E;
@@ -194,7 +176,6 @@ header {
     background-color: white;
     font-size: 0.9em;
     border-top: 1px solid lightgrey;
-    border-bottom: 1px solid lightgrey;
     box-sizing: border-box;
 }
 #subMenu2 #subMenu2_lastTxt{
@@ -223,10 +204,9 @@ header {
     margin: 10px 0 10px 0;
 }
 #subMenu2 #subMenu2_firstBox .subMenu2_menu{
-    width: 48%;
-    height: 85px;
+    width: 50%;
+    height: 100%;
     float: left;
-    /*border: 1px solid black;*/
 }
 #subMenu2 ul li{
     position: relative;
@@ -255,7 +235,8 @@ header {
     width: 100%;
     height: 100%;
     background-color: white;
-    z-index: 10;
+    border-top: 1px solid lightgrey;
+    margin-left: 30px;
 }
 .mobileGnb #mobileTop{
     /*z-index: 200;*/
@@ -267,20 +248,20 @@ header {
     cursor: pointer;
     scale: 1.3;
 }
-.mobileGnb .mobileMenu li{
-    margin: 20px 0 0 30px;
-    font-size: 1.3em;
+.mobileMenu li{
+    margin-top: 20px;
+    font-size: 1em;
     font-weight: bolder;
 }
-.mobileGnb .mobileMenu li a{
-    color: black;
+.mobileMenu li a{
+    color: #60227E;
     text-decoration: none;
-    /*font-size: 1.3em;*/
+    font-size: 1.3em;
 }
-.mobileGnb .mobileMenu #subM1 li a{
+.mobileMenu #subM1 li a{
     color: black;
 }
-.mobileGnb .mobileMenu #subM2 li a{
+.mobileMenu #subM2 li a{
     color: #5B6168;
 }
 .mobileMenu #subM1 li a:hover,
@@ -294,7 +275,7 @@ header {
 .lessBtn2{
     display: flex;
     position: absolute;
-    left:92%;
+    left:80%;
     cursor: pointer;
     z-index: 9;
 }
@@ -311,7 +292,7 @@ header {
     position: relative;
     left: -20px;
     list-style: none;
-    font-size: 1em;
+    font-size: 0.8em;
 }
 .mobileGnb .mobileMenu #subM2{
     width: 100%;
@@ -331,187 +312,173 @@ header {
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(2),
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(3),
 .mobileGnb .mobileMenu #subM2 li:nth-of-type(4){
-    font-size: 1em;
+    font-size: 0.7em;
 }
 /**********************title**********************/
 #title {
     width: 100%;
-    /*height: 50px;*/
     position: absolute;
     text-align: center;
     font-size: 2.1em;
-    /*border: 1px solid red;*/
     margin:120px auto;
-    /*display: none;*/
-}
-/**********************section1 네비**********************/
-#section1_nav{
-    width: 100%;
-    height: 100px;
-    /*border: 1px solid black;*/
-    margin: 50px auto 0 auto;
-    position: relative;
-}
-#section1_nav nav{
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-#section1_nav nav ul{
-    display: flex;
-    justify-content: center;
-}
-#section1_nav nav ul li{
-    margin: 10px;
-    font-size: 1em;
-    color: #AAAAAA;
-    font-weight: bolder;
-    list-style: none;
-    cursor: pointer;
-    letter-spacing:1px;
-}
-#section1_nav nav ul .section1_nav_img{
-    width: 35px;
-    height: 35px;
-    background-color: #E9E9E9;
-    border-radius: 50%;
-    text-align: center;
-}
-#section1_nav nav ul .section1_nav_img img{
-    margin-top: 10px;
-}
-.active{
-    color: black !important;
-    border-bottom: 2px solid black;
 }
 /**********************section1**********************/
 #section1{
-    height: auto;
-    width: 1141px;
-    /*border: 1px solid red;*/
-    margin: 0 auto;
-    /*position: absolute;*/
-}
-.bor{
-    border: 1px solid red;
-}
-.sec1-mb-90{
-    margin-bottom: 90px;
-}
-#section1 img{
-    /*object-fit: cover;*/
-}
-#section1 #section1_firstLine{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-#section1 .section1_imgBox{
-    width: auto;
-    height: auto;
     position: relative;
-    /*border: 1px solid black;*/
+    display: flex;
+    justify-content: space-around;
+    width: 80%;
+    height: 200px;
+    margin: 80px auto;
 }
-#section1 .Classification{
-    position: absolute;
+#section1 .textBox{
+    /*display: none;*/
+}
+#section1 div{
+    width: 260px;
+}
+#section1 div .name{
     font-weight: bolder;
-    color: white;
-    letter-spacing: 1px;
-    bottom: 10px;
-    left: 10px;
+    border-bottom: 2px solid black;
+    margin-bottom: 10px;
 }
-#section1 .section1_txtBox h3,
-#section1 .section1_txtBox p{
-    margin-left: 10px;
+#section1 div .name:nth-of-type(2){
+    margin-top: 50px;
 }
-#section1 .section1_txtBox h3{
-    font-size: 18px;
+#section1 div p{
+    font-size: 0.9em;
 }
-#section1 .section1_txtBox p{
-    font-size: 13px;
+#section1 div li{
+    margin-left: 18px;
+    margin-top: 5px;
+    font-size: 0.9em;
+    list-style: square;
 }
-#section1 #section1_secondLine{
+/**********************section1-mobile**********************/
+#section1 #section1_mobile{
+    width: 500px;
+    height: 320px;
+    margin-top: -160px;
+}
+#section1 #section1_mobile div{
+    float: left;
+}
+#section1 #section1_mobile .section1_mobile_txtBox{
+    height: 30px;
     width: 100%;
-    display: flex;
-    justify-content: center;
+    display: inline-block;
+    margin-top: 20px;
 }
-#section1 #section1_thirdLine{
+#section1 #section1_mobile .section1_mobile_txtBox ul{
     width: 100%;
-    display: flex;
-    justify-content: left;
 }
-/**********************section1_imgHover**********************/
-.box{
-    width: 285px;
-    height: 325px;
-}
-#section1 .box:hover .section1_txtBox{
-    display: none;
-    width: 100%;
-    height: 100%;
-}
-#section1 .section1_imgHoverBox{
-    position: absolute;
-    width: 245px;
-    height: 317px;
-    background-color: #60227E;
-    opacity: 0.9;
-    display: none;
+#section1 #section1_mobile .section1_mobile_txtBox:nth-of-type(4){
     margin-top: 60px;
 }
-#section1 .section1_imgHoverBox .section1_imgHoverTxt{
-    width: 200px;
-    height: 317px;
-    z-index: 5;
+#section1 #section1_mobile .section1_mobile_txtBox li{
+    font-size: 0.8em;
 }
-#section1 .section1_imgHoverBox h2,
-#section1 .section1_imgHoverBox span,
-#section1 .section1_imgHoverBox p{
+#section1 #section1_mobile .section1_mobile_txtBox li:nth-of-type(2),
+#section1 #section1_mobile .section1_mobile_txtBox li:nth-of-type(3),
+#section1 #section1_mobile .section1_mobile_txtBox li:nth-of-type(4),
+#section1 #section1_mobile .section1_mobile_txtBox li:nth-of-type(5){
+    margin-left: 110px;
+}
+#section1 #section1_mobile div p{
+    margin-top: 5px;
+    font-size: 0.8em;
+}
+#section1 #section1_mobile div .mobileName{
+    width: 90px;
+    border-bottom: 2px solid black;
+    font-weight: bolder;
+    font-size: 0.8em;
+    margin-right: 20px;
+}
+/**********************section2**********************/
+#section2{
+    position: relative;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+}
+#section2 #purple{
+    text-align: center;
     position: absolute;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background-color: #70388B;
+    opacity: 0.9;
     color: white;
-}
-#section1 .section1_imgHoverBox h2{
-    top: 50px;
-    left: 20px;
-}
-#section1 .section1_imgHoverBox span{
-    top: 200px;
-    left: 30px;
-}
-#section1 .section1_imgHoverBox p{
-    bottom: 30px;
-    left: 10px;
-    font-size: 13px;
-}
-#section1 .box:hover .section1_imgHoverBox{
-    display: block;
+    margin-right: 220px;
     z-index: 2;
 }
-/*#section1 .box:hover .section1_imgHoverBox .section1_imgHoverTxt{*/
-/*    z-index: 3;*/
-/*}*/
-#section1 .box:hover .Classification{
-    top: 20px;
-    left: 20px;
+#section2 #navy{
+    text-align: center;
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background-color: #53618C;
+    opacity: 0.9;
+    color: white;
+    margin-left: 220px;
 }
-.arrow{
-    color: #1A191B;
+#section2 #purple div,
+#section2 #navy div{
+    margin-top: 50px;
 }
-/**********************PlusBtn**********************/
-#PlusBtn_box{
-    width: 100%;
+#section2 #purple h1,
+#section2 #navy h1{
+    font-size: 6em;
+    font-weight: lighter;
+}
+#section2 #purple p,
+#section2 #navy p{
+    font-size: 1.1em;
+}
+/**********************section3**********************/
+#section3{
+    width: 80%;
     height: auto;
-    margin: 80px 0 80px 0;
+    position: relative;
+    margin: 0 auto;
 }
-#PlusBtn{
+#section3 #client{
+    text-align: center;
+}
+#section3 #client h1{
+    font-size: 2.5em;
+}
+#section3 #client p{
+    font-size: 0.8em;
+    margin-top: 25px;
+    color: #999999;
+}
+/**********************section3 clientImgBox**********************/
+#section3 #clientImgBox{
+    margin: 60px auto;
+    width: 85%;
+    position: relative;
+}
+#section3 #clientImgBox ul{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background-color: #EFEFEF;
-    margin: 0 auto;
+    flex-wrap: wrap;
+}
+#section3 #clientImgBox li{
+    position: relative;
+    margin: 5px;
+    border: 1px dashed grey;
+    width: 150px;
+    height: 60px;
+    text-align: center;
+    line-height: 70px;
+    list-style: none;
 }
 /**********************footer**********************/
 #footer{
@@ -531,6 +498,9 @@ header {
 #footer div img{
     margin-bottom: 30px;
 }
+#footer div p{
+    font-size: 0.8em;
+}
 /***************************************************************************/
 /*********************************미디어 쿼리*********************************/
 /***************************************************************************/
@@ -549,7 +519,7 @@ header {
 /**************타블렛 사이즈***************/
 @media screen and (min-width: 841px) and (max-width: 1199px){
     #topGnb ul li,
-    #title,
+    #section1_mobile,
     #language{
         display: none;
     }
@@ -563,21 +533,49 @@ header {
     }
 }
 /**************모바일 사이즈***************/
-@media screen and (max-width: 840px) {
+@media screen and (max-width: 840px){
     #topGnb ul li,
     #title,
-    #language {
+    #section1 .textBox,
+    #language{
         display: none;
     }
-    #topGnb {
+    #topGnb{
         /*background-color: #1A191B;*/
     }
-    #hamburger {
+    #hamburger{
         display: block;
         margin-right: 30px;
         scale: 1.3;
     }
-    #topGnb img {
+    #topGnb img{
         margin-left: 30px;
+    }
+    #section2{
+        height: 300px;
+    }
+    #section2 #purple,
+    #section2 #navy{
+        width: 200px;
+        height: 200px;
+    }
+    #section2 #purple{
+        margin-left: 50px;
+    }
+    #section2 #navy{
+        margin-right: 50px;
+    }
+    #section2 #purple div,
+    #section2 #navy div{
+        margin-top: 30px;
+    }
+    #section2 #purple h1,
+    #section2 #navy h1{
+        font-size: 4em;
+        font-weight: lighter;
+    }
+    #section2 #purple p,
+    #section2 #navy p{
+        font-size: 0.8em;
     }
 }
