--- a/css/company.css
+++ b/css/company.css
@@ -19,20 +19,20 @@
 html, body {
     width: 100%;
     height: 100%;
-    font-family: 'Noto Sans KR', sans-serif;
+    /*background-color: #5B6168;*/
 }
 #wrapper {
     width: 100%;
     height: 100%;
 }
 header {
-    width: 80%;
+    width: 100%;
     height: 250px;
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
     position: relative;
-    margin: 0 auto;
+    /*  border: 1px solid red;*/
 }
 #subMenu2 {
     display: none;
@@ -74,6 +74,7 @@ header {
     line-height: 100px;
     position: relative;
     left: -40px;
+    /*margin-right: -30px;*/
 }
 #topGnb ul li a::after {
     content: "";
@@ -160,6 +161,9 @@ header {
     color: #60227E;
     transition: color 0.5s;
 }
+/*#subMenu li a{
+     position: absolute;
+}*/
 #subMenu li:hover,
 #subMenu2 ul li a:hover{
     color: #60227E;
@@ -235,7 +239,6 @@ header {
     width: 100%;
     height: 100%;
     background-color: white;
-    border-top: 1px solid lightgrey;
     margin-left: 30px;
 }
 .mobileGnb #mobileTop{
@@ -317,10 +320,13 @@ header {
 /**********************title**********************/
 #title {
     width: 100%;
+    /*height: 50px;*/
     position: absolute;
     text-align: center;
     font-size: 2.1em;
+    /*border: 1px solid red;*/
     margin:120px auto;
+    /*display: none;*/
 }
 /**********************section1**********************/
 #section1{
@@ -358,6 +364,7 @@ header {
 #section1 #section1_mobile{
     width: 500px;
     height: 320px;
+    /*border: 1px solid red;*/
     margin-top: -160px;
 }
 #section1 #section1_mobile div{
@@ -368,6 +375,7 @@ header {
     width: 100%;
     display: inline-block;
     margin-top: 20px;
+    /*float: right;*/
 }
 #section1 #section1_mobile .section1_mobile_txtBox ul{
     width: 100%;
@@ -377,6 +385,8 @@ header {
 }
 #section1 #section1_mobile .section1_mobile_txtBox li{
     font-size: 0.8em;
+    /*display: flex;*/
+    /*flex-direction: column;*/
 }
 #section1 #section1_mobile .section1_mobile_txtBox li:nth-of-type(2),
 #section1 #section1_mobile .section1_mobile_txtBox li:nth-of-type(3),
@@ -408,6 +418,7 @@ header {
     position: absolute;
     width: 300px;
     height: 300px;
+    /*line-height: 100px;*/
     border-radius: 50%;
     background-color: #70388B;
     opacity: 0.9;
@@ -444,6 +455,7 @@ header {
     width: 80%;
     height: auto;
     position: relative;
+    /*border: 1px solid red;*/
     margin: 0 auto;
 }
 #section3 #client{
@@ -461,6 +473,7 @@ header {
 #section3 #clientImgBox{
     margin: 60px auto;
     width: 85%;
+    /*border: 1px solid red;*/
     position: relative;
 }
 #section3 #clientImgBox ul{
