--- a/css/index.css
+++ b/css/index.css
@@ -37,13 +37,6 @@ header {
     position: absolute;
     /*  border: 1px solid red;*/
 }
-header:hover #topGnb,
-header:hover #subMenu,
-header:hover #subMenu2{
-    background-color: white;
-    transition: background-color 0.5s;
-    color: black;
-}
 #subMenu2 {
     display: none;
 }
@@ -117,7 +110,7 @@ header:hover #subMenu2{
     /*border: 1px solid red;*/
 }
 #topGnb:hover {
-    /*background-color: white;*/
+    background-color: white;
     color: #1A191B;
     transition: background-color 0.5s;
 }
@@ -142,6 +135,8 @@ header:hover #subMenu2{
     line-height: 100px;
     position: relative;
     left: -40px;
+    /*color: white;*/
+    /*margin-right: -30px;*/
 }
 #topGnb ul li a::after {
     content: "";
@@ -153,6 +148,9 @@ header:hover #subMenu2{
     height: 3px;
     transition: width 0.5s;
     margin: 0 auto;
+}
+header:hover #topGnb ul li a{
+    color: black;
 }
 #topGnb ul li:hover a::after {
     width: 50%;
@@ -186,7 +184,7 @@ header:hover #subMenu2{
     position: absolute;
     /*margin-top: 100px;*/
     z-index: 99999 !important;
-    /*background-color: white;*/
+    background-color: white;
     box-sizing: border-box;
     transition: background-color 0.5s;
     display: none;
@@ -244,7 +242,8 @@ header:hover #subMenu2{
     z-index: 100;
     display: flex;
     justify-content: center;
-    /*background-color: white;*/
+    background-color: white;
+    transition: background-color 0.5s;
     font-size: 0.9em;
     border-top: 1px solid lightgrey;
     box-sizing: border-box;
