--- a/css/method.css
+++ b/css/method.css
@@ -241,6 +241,7 @@ header {
     display: flex;
     justify-content: space-between;
     margin: 40px;
+    z-index: 99999!important;
 }
 .mobileGnb #mobileTop .close{
     cursor: pointer;
@@ -359,13 +360,36 @@ header {
     margin-top: 10px;
     color: #5B6168;
 }
+/***display-ContentBox***/
+#section1 #d-ContentBox{
+    position: relative;
+    height: 550px;
+    margin-top: -120px;
+    display: none;
+}
+#section1 #d-ContentBox .contentBox{
+    display: flex;
+    margin: 30px 30px 30px 0;
+}
+#section1 #d-ContentBox .contentBox .inside_txtBox p{
+    color: #5B6168;
+    /*font-size: 0.9em;*/
+}
+#section1 #d-ContentBox .contentBox .inside_ContentBox{
+    width: 200px;
+    text-align: center;
+}
+#section1 #d-ContentBox .contentBox .inside_ContentBox img{
+    margin-top: 20px;
+}
 /**********************section2**********************/
 #section2{
     width: 100%;
     height: 730px;
-    /*border: 1px solid red;*/
-/*    display: flex;
-    justify-content: center;*/
+    border: 3px solid red;
+    position: relative;
+    /*    display: flex;
+        justify-content: center;*/
 }
 #section2 #section2_txtBox{
     width: 100%;
@@ -453,8 +477,80 @@ header {
     font-weight: bolder;
     color: white;
 }
+/**********************section2 display_box**********************/
+#section2 #display_CircleBox{
+    position: absolute;
+    width: 100%;
+    height: 1200px;
+    /*border: 5px solid green;*/
+    display: none;
+}
+#section2 #display_blueCircleBox{
+    position: absolute;
+    height: auto;
+    /*border: 1px solid red;*/
+    margin-top: 295px;
+}
+#section2 #display_blueCircleBox .display_blueCircle{
+    width: 120px;
+    height: 120px;
+    background-color: #53618C;
+    border-radius: 50%;
+    text-align: center;
+    opacity: 0.9;
+    margin: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#section2 #display_CircleBox #display_blueCircleBox .display_blueCircle p{
+    position: relative;
+    color: white;
+    /*border: 1px solid red;*/
+}
+#section2 #display_purpleCircleBox{
+    position: absolute;
+    width: 300px;
+    /*border: 1px solid blue;*/
+    margin-left: 100px;
+}
+#section2 #display_purpleCircleBox .display_purpleCircle p{
+    position: relative;
+    /*top: 40px;*/
+    color: white;
+    font-weight: bolder;
+}
+#section2 #display_purpleCircleBox .display_allPurpleCircle{
+    position: relative;
+}
+#section2 #display_purpleCircleBox .display_allPurpleCircle .display_purpleCircle_txtBox{
+    float: left;
+    position: absolute;
+    /*border: 1px solid black;*/
+    margin-top: -130px;
+    margin-left: 160px;
+    display: flex;
+}
+#section2 #display_purpleCircleBox .display_allPurpleCircle .display_purpleCircle_txtBox ul li{
+    list-style: none;
+    font-size: 13px;
+    color: #5B6168;
+}
+#section2 #display_purpleCircleBox .display_allPurpleCircle .display_purpleCircle{
+    width: 120px;
+    height: 120px;
+    background-color: #70388B;
+    border-radius: 50%;
+    text-align: center;
+    opacity: 0.9;
+    margin: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /**********************footer**********************/
 #footer{
+    position: relative;
     width: 100%;
     height: 200px;
     background-color: #1A191B;
@@ -490,8 +586,15 @@ header {
 @media screen and (min-width: 841px) and (max-width: 1199px){
     #topGnb ul li,
     #section1_mobile,
-    #language{
+    #language,
+    #title,
+    #section1 #allContentBox,
+    #section2 #section2_blueCircleBox,
+    #section2 #section2_purpleCircleBox{
         display: none;
+    }
+    header{
+        width: 100%;
     }
     #hamburger{
         display: block;
@@ -502,13 +605,37 @@ header {
         margin-left: 30px;
         width: 120px;
         height: 20px;
+    }
+    #section1 #d-ContentBox{
+        display: block;
+    }
+    #section1 #d-ContentBox .contentBox .inside_txtBox h3{
+        margin-bottom: 5px;
+    }
+    #section2{
+        margin-top: 100px;
+        height: 1385px;
+    }
+    #display_CircleBox{
+        display: block;
+    }
+    #section2 #display_CircleBox{
+        display: block;
     }
 }
 /**************모바일 사이즈***************/
 @media screen and (max-width: 840px){
     #topGnb ul li,
-    #language{
+    #section1_mobile,
+    #language,
+    #title,
+    #section1 #allContentBox,
+    #section2 #section2_blueCircleBox,
+    #section2 #section2_purpleCircleBox{
         display: none;
+    }
+    header{
+        width: 100%;
     }
     #hamburger{
         display: block;
@@ -519,5 +646,33 @@ header {
         margin-left: 30px;
         width: 120px;
         height: 20px;
+    }
+    #section1 #d-ContentBox{
+        display: block;
+    }
+    #section1 #d-ContentBox .contentBox .inside_ContentBox{
+        width: 130px;
+    }
+    #section1 #d-ContentBox .contentBox .inside_ContentBox img{
+        width: 50px;
+        height: 50px;
+        margin-top: 40px;
+    }
+    #section1 #d-ContentBox .contentBox .inside_txtBox h3{
+        font-size: 18px;
+        margin-bottom: 3px;
+    }
+    #section1 #d-ContentBox .contentBox .inside_txtBox p{
+        font-size: 14px;
+    }
+    #section2{
+        margin-top: 100px;
+        height: 1385px;
+    }
+    #display_CircleBox{
+        display: block;
+    }
+    #section2 #display_CircleBox{
+        display: block;
     }
 }
