--- a/css/work_list.css
+++ b/css/work_list.css
@@ -348,7 +348,6 @@ header {
 #section1_nav{
     width: 100%;
     height: 100px;
-    /*border: 1px solid black;*/
     margin: 50px auto 0 auto;
     position: relative;
 }
@@ -388,7 +387,7 @@ header {
 #section1{
     height: auto;
     width: 1141px;
-    /*border: 1px solid red;*/
+    border: 1px solid red;
     margin: 0 auto;
     /*position: absolute;*/
 }
@@ -401,10 +400,10 @@ header {
 #section1 img{
     /*object-fit: cover;*/
 }
-#section1 #section1_firstLine{
+.section1_LineBox{
     width: 100%;
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
 }
 #section1 .section1_imgBox{
     width: auto;
@@ -530,6 +529,9 @@ header {
 }
 #footer div img{
     margin-bottom: 30px;
+}
+.bor{
+    border: 1px solid red;
 }
 /***************************************************************************/
 /*********************************미디어 쿼리*********************************/
